--- a/src/paleocene/index.css
+++ b/src/paleocene/index.css
@@ -34,6 +34,9 @@ a {
 a:hover {
     opacity: 0.67;
 }
+img {
+    object-fit: scale-down;
+}
 main {
     align-items: stretch;
     align-content: center;
@@ -55,6 +58,7 @@ img.cell {
     height: auto;
     max-height: 280px;
     max-width: calc(100vw - 0.5in);
+    object-fit: cover;
 }
 header, section, footer {
     align-content: center;
