--- a/src/paleocene/issues/index.css
+++ b/src/paleocene/issues/index.css
@@ -5,7 +5,7 @@ img.cell.cover {
     max-height: 734px;
 }
 main {
-    max-width: 15in;
+    max-width: 14.625in;
 }
 header, section {
     max-width: 9.75in;
