--- a/src/pleistocene/index.css
+++ b/src/pleistocene/index.css
@@ -15,6 +15,9 @@
 .print, .screen, .speech {
     display: none;
 }
+img {
+    object-fit: scale-down;
+}
 html {
     background-color: black;
 }
